honour relative positioning on table cells.

CSS 2.1-9.3.1 says the effect of position:relative on such a display is undefined,
but the offset is applied in MSIE, so lets fallback to being compatible.

BUG: 130955


svn path=/branches/KDE/3.5/kdelibs/; revision=564852